[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "networkx>=3.4.2",
  "numpy>=2.2.1",
  "pandas>=2.2.3",
  "scipy>=1.15.0",
]
description = "Algorithm of etc."
license = {text = "Apache-2.0"}
name = "pyalgo-tools"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.3"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/pyalgo-tools"

[tool.uv]
dev-dependencies = [
  "pytest-snapshot>=0.9.0",
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D", "DOC", "E501", "PD901", "RET504"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
